techpack: audio: build inline for OP8 Pro
Fix missing codec tfa9894 entry in kbuild for OP8 Pro.
Lets disable -werror for now and solve the warnings in a separate commit.

--- a/asoc/codecs/Kbuild
+++ b/asoc/codecs/Kbuild
@@ -197,7 +197,6 @@ CDEFINES +=	-DANI_LITTLE_BYTE_ENDIAN \
 		-DANI_OS_TYPE_ANDROID=6 \
 		-DPTT_SOCK_SVC_ENABLE \
 		-Wall\
-		-Werror\
 		-D__linux__
 
 KBUILD_CPPFLAGS += $(CDEFINES)
@@ -226,6 +225,7 @@ ifeq ($(KERNEL_BUILD), 1)
 	obj-y	+= wcd937x/
 	obj-y	+= wcd938x/
 	obj-y	+= bolero/
+	obj-y	+= tfa9894/
 endif
 # Module information used by KBuild framework
 obj-$(CONFIG_WCD9XXX_CODEC_CORE) += wcd_core_dlkm.o
